@startuml


class Utilisateur {
    id
    nom
    email
    motDePasse
    role
    actif
}

class Produit {
    id
    nom
    prixAchat
    prixVente
    quantiteStock
    stockMinimum
    actif
}

class Client {
    id
    nom
    prenom
    telephone
    limiteCredit
    detteTotale
}

class Commande {
    id
    reference
    dateCommande
    montantTotal
    modeReglement
    statut
}

class LigneCommande {
    id
    quantite
    prixUnitaire
    sousTotal
}

class Dette {
    id
    reference
    montantInitial
    montantPaye
    montantRestant
    statut
    dateCreation
}

class Paiement {
    id
    montant
    datePaiement
    modePaiement
}

class Fournisseur {
    id
    entreprise
    telephone
    adresse
    email
    actif
}

class Approvisionnement {
    id
    referenceBL
    dateReception
    total
    statut
}

class LigneApprovisionnement {
    id
    quantiteRecue
    prixAchatUnitaire
    sousTotal
}



Client "1" -- "0..*" Commande 
Commande "1" -- "1..*" LigneCommande 
Produit "1" -- "0..*" LigneCommande

Client "1" -- "0..*" Dette 
Commande "1" -- "0..1" Dette 
Dette "1" -- "0..*" Paiement 

Fournisseur "1" -- "0..*" Approvisionnement 
Approvisionnement "1" -- "1..*" LigneApprovisionnement 
Produit "1" -- "0..*" LigneApprovisionnement 

Utilisateur "1" -- "0..*" Commande 
Utilisateur "1" -- "0..*" Approvisionnement 

@enduml